[tool.poetry]
name = "workshop-estrutura-etl"
version = "0.1.0"
description = "Projeto de ETL usando padrões de projeto."
authors = ["Kaio Rocha <kaiodtr@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
